Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (Mar 14, 2003)
   Fixed two bugs with deleting messages with the incremental mode. One bug
  meant that the message body was only rewritten or removed with the
  delete_msgnum option, not delete_older / delete_newer. The other bug
  involved only updating the is_deleted flag in the gdbm file if the
  message body was redone to update a MSG_IN_REPLY_TO line.

 Kent Landfield (Mar 9, 2003)
   - updated domains.h to accurately reflect the current set of root domains.

 Peter McCluskey (Mar 7, 2003)
   Fixed problem with reverse_folders option that caused the index file
  to leave out folders when there were some unusual mismatches between the
  2 dates in one message.

 Kent Landfield (Feb 28, 2003)
   - changed wait.h sys/wait.h for portability in msg2archive
   - removed unused variable in finelink.c

 Kent Landfield (Feb 20, 2003)
   - corrected docs/Makefile.in to create the images dir if it does not exist.

 Kent Landfield (Feb 20, 2003)
   - added wait.h to msg2archive that was needed for s_popen()
   - removed unused variable in finelink.c

 Peter McCluskey (Feb 20, 2003)
   Made version 2.1.7 tar file.

 Jose Kahan (jose@w3.org) (Feb 20, 2003)
   - makemailcommand wasn't escaping non-ascii characters in the URLS
     that it generated.

 Peter McCluskey (Feb 19, 2003)
   Fix to append option to handle some lines getting discarded in mdecodeQP.

 Kent Landfield (Feb 19, 2003)
   - Updated TODO with configure issues and other corrections we want
     to make to the code in the near future.

 Jose Kahan (jose@w3.org) (Feb 19, 2003)
   - Upgraded extract_rfc2047_content() as the previous extracting
     algorithm was broken.

 Kent Landfield (Feb 18, 2003)
   - Added missing contrib utilities, contrib/msg2hypermailarchive.py
     and contrib/runtest to FILES
   - Added checking in struct.c to limit the length of Subject: line to 
     avoid theoretical Denial-of-Service